--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "countup.js": "^2.8.0",
+    "lucide-react": "^0.383.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
