--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "clean": "rm -rf dist",
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --outDir=build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
